kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-equals-co-zw
  name: CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-equals-co-zw
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-equals-co-zw
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-equals-co-zw
    spec:
      containers:
        - image: docker.registry/APP_NAME-CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-portal-hybrid:BUILD_NUMBER
          imagePullPolicy: Always
          name: CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-equals-co-zw
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-equals-co-zw
spec:
  selector:
    app: CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-equals-co-zw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-equals-co-zw
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: CLIENT_NAME.DEPLOYMENT_ENVIRONMENT.equals.co.zw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: CLIENT_NAME-DEPLOYMENT_ENVIRONMENT-equals-co-zw
                port:
                  number: 80
